--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-    "name": "node-example",
-    "version": "0.0.1",
-    "dependencies": {
-        "express": "3.1.x"
+    "name":"node-example",
+    "version":"0.0.1",
+    "dependencies":{
+        "express":"3.1.x",
         "coffee-script":">=1.1.3",
         "socket.io":">=0.807"
     },
-    "engines": {
-        "node": "0.10.x",
-        "npm": "1.2.x"
+    "engines":{
+        "node":"0.10.x",
+        "npm":"1.2.x"
     }
 }
