--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
     "version":"0.0.1",
     "dependencies":{
         "express":"3.1.x",
-        "coffee-script":">=1.1.3",
-        "socket.io":">=0.807"
+        "coffee-script":">=1.1.3"
     },
     "engines":{
         "node":"0.10.x",
